--- a/.theia/launch.json
+++ b/.theia/launch.json
@@ -2,6 +2,27 @@
    "configurations": [
       {
          "type": "java",
+         "name": "CodeLens (Launch) - MyClass",
+         "request": "launch",
+         "mainClass": "ie.gmit.LabWeek2.MyClass",
+         "projectName": "test-BenL19_d83ed57b"
+      },
+      {
+         "type": "java",
+         "name": "CodeLens (Launch) - Parameters",
+         "request": "launch",
+         "mainClass": "ie.gmit.LabWeek2.Parameters",
+         "projectName": "test-BenL19_d83ed57b"
+      },
+      {
+         "type": "java",
+         "name": "CodeLens (Launch) - MyClass",
+         "request": "launch",
+         "mainClass": "ie.gmit.packagename.MyClass",
+         "projectName": "test-BenL19_d83ed57b"
+      },
+      {
+         "type": "java",
          "name": "CodeLens (Launch) - HelloWorld",
          "request": "launch",
          "mainClass": "ie.gmit.packagename.HelloWorld",
